// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CharacterDetails /> Snapshot test for CharacterDetails component Should match the CharacterDetails snapshot when there is character data 1`] = `
<div
  className="col-md-11"
>
  <div
    className="col-md-6"
  >
    <img
      alt="sorry, not available now"
      className="character-img-left rounded"
    />
  </div>
  <div
    className="col-md-6"
  >
    <div
      className="character-details-right"
    >
      <div
        className="character-detail-field border-bottom row"
      >
        <label
          className="col-sm-4"
        >
          NAME:
        </label>
        <p
          className="col-sm-8"
        >
          test
        </p>
      </div>
      <div
        className="character-detail-field border-bottom row"
      >
        <label
          className="col-sm-4"
        >
          ORIGIN:
        </label>
        <p
          className="col-sm-8"
        >
          test
        </p>
      </div>
      <div
        className="character-detail-field border-bottom row"
      >
        <label
          className="col-sm-4"
        >
          EPISODES:
        </label>
        <div
          className="col-sm-8"
        >
          <p>
            test1
          </p>
          <p>
            test2
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CharacterDetails /> Snapshot test for CharacterDetails component Should match the CharacterDetails snapshot when there is no character data 1`] = `
<div
  className="col-md-11"
>
  <div
    className="col-md-6"
  >
    <img
      alt="sorry, not available now"
      className="character-img-left rounded"
    />
  </div>
  <div
    className="col-md-6"
  >
    <div
      className="character-details-right"
    />
  </div>
</div>
`;
